Bug 137765 - FILEOPEN DOCX VML Line shapes rotation imported incorrectly
Summary: FILEOPEN DOCX VML Line shapes rotation imported incorrectly
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Regényi
URL:
Whiteboard: target:7.1.0
Keywords: filter:docx
Depends on:
Blocks: VML-Shapes
  Show dependency treegraph
 
Reported: 2020-10-26 10:01 UTC by NISZ LibreOffice Team
Modified: 2020-11-11 16:19 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Word (12.83 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2020-10-26 10:01 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document side by side in Word and Writer (88.88 KB, image/png)
2020-10-26 10:02 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-10-26 10:01:57 UTC
Created attachment 166729 [details]
Example file from Word

Attached document was made in Word 2013 and contains line shapes rotated and saved as compatibility mode VML.
When opened in Writer the rotation values are opened as 360-X degrees instead of X degrees, but are still incorrectly displayed.

Steps to reproduce:
    1. Open attached file

Actual results:
Lines are incorrectly rotated.

Expected results:
Same rotation displayed as in Word.

LibreOffice details:
Version: 7.1.0.0.alpha1+ (x64)
Build ID: b61bf7c7cfcf97a5ade6d130873af146670bc2ee
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2020-10-26 10:02:21 UTC
Created attachment 166730 [details]
Screenshot of the original document side by side in Word and Writer
Comment 2 Commit Notification 2020-10-29 14:19:16 UTC
Regényi Balázs committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7774d01891df6787058677dee4bc449cd5841c59

tdf#137765 DOCX VML shape import: fix rotation handling

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 NISZ LibreOffice Team 2020-11-11 16:19:15 UTC
Verified in

Version: 7.1.0.0.alpha1+ (x64)
Build ID: a689cf1672e89cb78fbcfa14c505850927e71f58
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded

Thanks for fixing!