tdf#137765 DOCX VML shape import: fix rotation handling

Change-Id: I78c89d4f795a67ff44ae9cef9daf44bf9f1d5c8a